# FFR-Backend

./: .gitignore  docker-compose.yml
.circleci/: config.yml
.ssh/: known_hosts
projects/FFR-Bot/: Dockerfile  README.md  pyproject.toml  pyrightconfig.json
projects/FFR-Bot/ffr_bot/: constants.py  main.py  roles.py  text.py
projects/FFR-Bot/ffr_bot/common/: discord_user.py
projects/FFR-Bot/ffr_bot/racing/: async_race.py  ffrrace.py  races.py  sync_race.py
projects/FFR-Bot/ffr_bot/voting/: ffrvoter.py  poll.py  poll.test.py  polls.py  stv_election.py  stv_election.test.py
projects/MongoDB/: Dockerfile  init.sh
projects/MongoDB/schemas/: race.json  user.json
